[project]
name = "ascii-explorer"
version = "0.1.0"
description = "Multiplayer ASCII dungeon explorer over raw TCP sockets"
requires-python = ">=3.8,<4.0"
dependencies = []

[project.scripts]
server = "ascii_explorer.server:main"
client = "ascii_explorer.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ascii_explorer"]

[dependency-groups]
dev = [
  "ruff>=0.4",
  "pyright>=1.1",
  "pre-commit>=3.0",
]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "ANN",  # flake8-annotations
  "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "Linux"
include = ["src"]
strict = ["src/ascii_explorer"]
